@@ -1,5 +1,5 @@
 # Editor release-wide properties
-editor.release.number=1.4.5_20070222
+editor.release.number=1.4.5_20070226
 editor.contributors=Lindsay Bradford, Moe Wynn
 compatible.engine.release.number=Beta 8.1
 compatible.engine.jar.name=YAWLBeta8.1_Standalone.jar
