@@ -28,6 +28,7 @@ Version 1.4.5 (07/12/2006) "Blobby"
   * Enhanced the editor so that the status bar changes to indicate what it's doing when manipulating long-running file operations.
   * Fixed a bug where if you select "Cancel"at the exit confirmation dialog, the window close widget stops working. 
   * Fixes to the reduction rules and analysis code introduced to speed up processing on certain types of specifications.
+  * Enhanced the editor cursor to show the hourglass (busy) icon when engaged in file operations.
 
 Version 1.4.4 (29/11/2006) "MoreMoe"
   * Upgraded the editor to fix some bugs in reset net analysis and to include reduction rules for specification analysis.
